<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutAmount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_money_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lblCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/spinnerCurrency"
                app:layout_constraintStart_toStartOf="@id/spinnerCurrency" />

            <Spinner
                android:id="@+id/spinnerCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="@id/textInputLayoutAmount"
                app:layout_constraintStart_toEndOf="@id/textInputLayoutAmount" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutAmount" />

            <TextView
                android:id="@+id/lblInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/buyer_information"
                android:textSize="18dp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/txtTypeDocument"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document_type"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/spinnerDocumentType"
                app:layout_constraintStart_toStartOf="@id/spinnerDocumentType" />

            <Spinner
                android:id="@+id/spinnerDocumentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="@id/textInputLayoutDocument"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDocument"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/margin_input"
                android:layout_marginEnd="@dimen/margin_input"
                android:hint="@string/document"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtTypeDocument"
                app:layout_constraintTop_toBottomOf="@id/lblInformation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDocument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_input"
                android:layout_marginTop="@dimen/margin_input"
                android:layout_marginEnd="@dimen/margin_input"
                android:hint="@string/names"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutDocument">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSurNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_input"
                android:layout_marginTop="@dimen/margin_input"
                android:layout_marginEnd="@dimen/margin_input"
                android:hint="@string/surName"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutNames">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_input"
                android:layout_marginTop="@dimen/margin_input"
                android:layout_marginEnd="@dimen/margin_input"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutSurNames">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_input"
                android:layout_marginTop="@dimen/margin_input"
                android:layout_marginEnd="@dimen/margin_input"
                android:hint="@string/mobileNumber"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bottom_btn"
                android:layout_marginBottom="@dimen/margin_bottom_btn"
                android:text="@string/next"
                android:background="#009688"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutMobileNumber"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>