<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCard"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_input"
                android:hint="@string/card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="16"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnValidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:minWidth="150dp"
                android:text="@string/validateCard"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutCard" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cvvContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/btnValidate">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCardCvv"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_input"
                    android:hint="@string/cvv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_eye">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCardCvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCardExpirationDate"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_input"
                    android:hint="@string/expirationDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutCardCvv"
                    app:startIconDrawable="@drawable/ic_calendar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextCardExpirationDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/cvvContainer" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/payerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <TextView
                    android:id="@+id/lblInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/payer_information"
                    android:textSize="18dp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckedTextView
                    android:id="@+id/checkedSameBuyerPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/margin_input"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center_vertical"
                    android:text="@string/sameBuyer"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblInformation" />

                <TextView
                    android:id="@+id/txtTypeDocument"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/document_type"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/spinnerDocumentType"
                    app:layout_constraintStart_toStartOf="@id/spinnerDocumentType" />

                <Spinner
                    android:id="@+id/spinnerDocumentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="@id/textInputLayoutDocument"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDocument"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/margin_input"
                    android:layout_marginEnd="@dimen/margin_input"
                    android:hint="@string/document"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txtTypeDocument"
                    app:layout_constraintTop_toBottomOf="@id/checkedSameBuyerPerson">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDocument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="12" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_input"
                    android:layout_marginTop="@dimen/margin_input"
                    android:layout_marginEnd="@dimen/margin_input"
                    android:hint="@string/names"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutDocument">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutSurNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_input"
                    android:layout_marginTop="@dimen/margin_input"
                    android:layout_marginEnd="@dimen/margin_input"
                    android:hint="@string/surName"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutNames">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextSurName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_input"
                    android:layout_marginTop="@dimen/margin_input"
                    android:layout_marginEnd="@dimen/margin_input"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutSurNames">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textWebEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_input"
                    android:layout_marginTop="@dimen/margin_input"
                    android:layout_marginEnd="@dimen/margin_input"
                    android:hint="@string/mobileNumber"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_bottom_btn"
                    android:layout_marginBottom="@dimen/margin_bottom_btn"
                    android:background="#009688"
                    android:text="@string/next"
                    android:textColor="#fff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutMobileNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>